--- a/.env
+++ b/.env
@@ -9,9 +9,11 @@ NOTE_ICON_TITLE=false
 NOTE_ICON_FILETREE=false
 NOTE_ICON_INTERNAL_LINKS=false
 NOTE_ICON_BACK_LINKS=false
-STYLE_SETTINGS_CSS=
-STYLE_SETTINGS_BODY_CLASSES=
+STYLE_SETTINGS_CSS=body.css-settings-manager { } body.theme-light.css-settings-manager { } body.theme-dark.css-settings-manager { }
+STYLE_SETTINGS_BODY_CLASSES=theme-dark mod-macos is-mobile is-ios is-phone obsidian-app native-scrollbars show-inline-title show-view-header css-settings-manager listive-theme color-scheme-discord is-force-oled-black-mobile lst-fab-b2-3 is-css-guide list-d-d-d callout-style-icon-right lst-fm-compact lst-prop-super-compact lst-floating-tabs AT-multirow AT-column
 USE_FULL_RESOLUTION_IMAGES=false
+THEME=https://raw.githubusercontent.com/sergey900553/obsidian_githublike_theme/HEAD/theme.css
+BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
